{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 50,
  "lineage": "949356b1-8197-ccf7-1a64-65308531fa92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vivek_tf_vpc_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0af16ccde9d2836a0",
            "id": "igw-0af16ccde9d2836a0",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng103a_vivek_tf_ig"
            },
            "tags_all": {
              "Name": "eng103a_vivek_tf_ig"
            },
            "vpc_id": "vpc-0aa5deac0f5187b98"
          },
          "dependencies": [
            "aws_vpc.vivek_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vivek_tf_vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0a4abb77e130b1ab3",
            "id": "rtb-0a4abb77e130b1ab3",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af16ccde9d2836a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng103a_vivek_tf_vpc_rt"
            },
            "tags_all": {
              "Name": "eng103a_vivek_tf_vpc_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa5deac0f5187b98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vivek_tf_vpc_ig",
            "aws_vpc.vivek_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vivek_tf_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-008fff4be8213dc08",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008fff4be8213dc08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "access to the app",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220223181240525400000001",
            "name_prefix": "terraform-",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eng103a_vivek_tf_sg_app"
            },
            "tags_all": {
              "Name": "eng103a_vivek_tf_sg_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa5deac0f5187b98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vivek_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vivek_tf_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0bceb6d55d1aea11c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.25.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bceb6d55d1aea11c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eng103a_vivek_tf_subnet2"
            },
            "tags_all": {
              "Name": "eng103a_vivek_tf_subnet2"
            },
            "vpc_id": "vpc-0aa5deac0f5187b98"
          },
          "dependencies": [
            "aws_vpc.vivek_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vivek_tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0aa5deac0f5187b98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a8c1211c967cd49",
            "default_route_table_id": "rtb-0299c4b670e19549a",
            "default_security_group_id": "sg-03e2ea4443fb13a2b",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aa5deac0f5187b98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0299c4b670e19549a",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng103a_vivek_tf_vpc"
            },
            "tags_all": {
              "Name": "eng103a_vivek_tf_vpc"
            }
          }
        }
      ]
    }
  ]
}